[gd_scene load_steps=18 format=2]

[ext_resource path="res://Sprites/lion.png" type="Texture" id=1]
[ext_resource path="res://Sprites/fireball-lion.png" type="Texture" id=2]
[ext_resource path="res://Sprites/fire_lion.png" type="Texture" id=3]
[ext_resource path="res://FireLion.gd" type="Script" id=4]

[sub_resource type="AtlasTexture" id=5]
atlas = ExtResource( 1 )
region = Rect2( 256, 0, 64, 64 )

[sub_resource type="AtlasTexture" id=10]
atlas = ExtResource( 3 )
region = Rect2( 0, 0, 64, 64 )

[sub_resource type="AtlasTexture" id=11]
atlas = ExtResource( 3 )
region = Rect2( 64, 0, 64, 64 )

[sub_resource type="AtlasTexture" id=1]
atlas = ExtResource( 1 )
region = Rect2( 0, 0, 64, 64 )

[sub_resource type="AtlasTexture" id=2]
atlas = ExtResource( 1 )
region = Rect2( 64, 0, 64, 64 )

[sub_resource type="AtlasTexture" id=3]
atlas = ExtResource( 1 )
region = Rect2( 128, 0, 64, 64 )

[sub_resource type="AtlasTexture" id=4]
atlas = ExtResource( 1 )
region = Rect2( 192, 0, 64, 64 )

[sub_resource type="SpriteFrames" id=6]
animations = [ {
"frames": [ SubResource( 5 ) ],
"loop": false,
"name": "Die",
"speed": 3.0
}, {
"frames": [ SubResource( 10 ), SubResource( 11 ) ],
"loop": true,
"name": "Fire",
"speed": 5.0
}, {
"frames": [ SubResource( 1 ), SubResource( 2 ), SubResource( 3 ), SubResource( 4 ) ],
"loop": true,
"name": "Idle",
"speed": 5.0
} ]

[sub_resource type="RectangleShape2D" id=7]
extents = Vector2( 22, 1.5 )

[sub_resource type="AnimatedTexture" id=8]
frame_0/texture = ExtResource( 2 )

[sub_resource type="Curve" id=12]
_data = [ Vector2( 0, 0.463964 ), 0.0, 0.0, 0, 0, Vector2( 0.84658, 1 ), 0.0, 0.0, 0, 0, Vector2( 1, 0.824324 ), 0.0, 0.0, 0, 0 ]

[sub_resource type="Gradient" id=9]
offsets = PoolRealArray( 0, 0.774848, 0.997972, 1 )
colors = PoolColorArray( 1, 1, 1, 1, 1, 1, 1, 1, 0, 0, 0, 1, 1, 1, 1, 0 )

[sub_resource type="RectangleShape2D" id=13]
extents = Vector2( 5.25, 3 )

[node name="FireLeo" type="StaticBody2D"]
collision_layer = 2
collision_mask = 3
script = ExtResource( 4 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
position = Vector2( 1, 0 )
frames = SubResource( 6 )
animation = "Fire"
frame = 1
playing = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 0, 25.5 )
shape = SubResource( 7 )

[node name="CPUParticles2D" type="CPUParticles2D" parent="."]
position = Vector2( -20, -9 )
emitting = false
amount = 200
lifetime = 0.9
explosiveness = 0.12
randomness = 1.0
lifetime_randomness = 1.0
texture = SubResource( 8 )
direction = Vector2( -1, 0 )
spread = 14.68
gravity = Vector2( 0, -98 )
initial_velocity = 157.89
angular_velocity = 631.58
angular_velocity_random = 0.44
scale_amount = 1.5
scale_amount_curve = SubResource( 12 )
color_ramp = SubResource( 9 )

[node name="FireTimer" type="Timer" parent="."]
wait_time = 2.0
one_shot = true

[node name="HurtArea" type="Area2D" parent="."]
position = Vector2( -20, -9 )

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="HurtArea"]
polygon = PoolVector2Array( -44, 7, 1, 2, -51, -21, -105, -45, -126, -31, -121, 3 )

[node name="VisibilityEnabler2D" type="VisibilityEnabler2D" parent="."]
position = Vector2( -12, 1.50001 )
scale = Vector2( 14.1, 13.15 )
process_parent = true
physics_process_parent = true

[node name="Hitbox" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Hitbox"]
position = Vector2( 21.25, 22 )
shape = SubResource( 13 )

[node name="CollisionShape2D8" type="CollisionShape2D" parent="Hitbox"]
position = Vector2( 20, 12 )
shape = SubResource( 13 )

[node name="CollisionShape2D2" type="CollisionShape2D" parent="Hitbox"]
position = Vector2( -6, -5 )
shape = SubResource( 13 )

[node name="CollisionShape2D3" type="CollisionShape2D" parent="Hitbox"]
position = Vector2( -17, 5 )
shape = SubResource( 13 )

[node name="CollisionShape2D4" type="CollisionShape2D" parent="Hitbox"]
position = Vector2( 5, 7 )
shape = SubResource( 13 )

[node name="CollisionShape2D5" type="CollisionShape2D" parent="Hitbox"]
position = Vector2( -1, -15 )
shape = SubResource( 13 )

[node name="CollisionShape2D6" type="CollisionShape2D" parent="Hitbox"]
position = Vector2( -7, 15 )
shape = SubResource( 13 )

[node name="CollisionShape2D7" type="CollisionShape2D" parent="Hitbox"]
position = Vector2( -16, -17 )
shape = SubResource( 13 )

[node name="DeathTimer" type="Timer" parent="."]
wait_time = 0.5
one_shot = true

[node name="ColliderDelayTimer" type="Timer" parent="."]
wait_time = 0.5
one_shot = true

[connection signal="timeout" from="FireTimer" to="." method="_on_FireTimer_timeout"]
[connection signal="body_entered" from="HurtArea" to="." method="_on_HurtArea_body_entered"]
[connection signal="screen_entered" from="VisibilityEnabler2D" to="." method="_on_VisibilityEnabler2D_screen_entered"]
[connection signal="screen_exited" from="VisibilityEnabler2D" to="." method="_on_VisibilityEnabler2D_screen_exited"]
[connection signal="body_entered" from="Hitbox" to="." method="_on_Hitbox_body_entered"]
[connection signal="body_exited" from="Hitbox" to="." method="_on_Hitbox_body_exited"]
[connection signal="timeout" from="DeathTimer" to="." method="_on_DeathTimer_timeout"]
[connection signal="timeout" from="ColliderDelayTimer" to="." method="_on_ColliderDelayTimer_timeout"]
